--- a/digibank/src/assets/styles/_login.scss
+++ b/digibank/src/assets/styles/_login.scss
@@ -45,6 +45,7 @@ body {
     .formLogin {
         @extend .flexCenter;
         flex-direction: column;
+        width: 100%;
 
         .double-input {
             @extend .flexCenter;
@@ -79,6 +80,7 @@ body {
             color: $primary-color;
             background-color: $secondary-color;
             border: none;
+            cursor: pointer;
 
             font-size: 1.125rem;
         }
