--- a/digibank/src/assets/styles/main.css
+++ b/digibank/src/assets/styles/main.css
@@ -1,4 +1,4 @@
-.flexCenter, .formArea .formLogin .double-input, .formArea .formLogin, .formArea, .mainLogin, .headerLogin {
+.flexCenter, .mainCadastro .sectionRight .formCadastro .boxInputsCadastro, .mainCadastro .sectionRight .formCadastro, .mainCadastro .sectionRight, .mainCadastro .btnCadastro, .mainCadastro .sectionLeft .boxTextCadastro, .mainCadastro .sectionLeft, .formArea .formLogin .double-input, .formArea .formLogin, .formArea, .mainLogin, .headerLogin {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -36,6 +36,7 @@ body {
 }
 .formArea .formLogin {
   flex-direction: column;
+  width: 100%;
 }
 .formArea .formLogin .double-input {
   flex-direction: column;
@@ -63,7 +64,92 @@ body {
   color: #fff;
   background-color: #f20519;
   border: none;
+  cursor: pointer;
   font-size: 1.125rem;
+}
+
+.flexCenter, .mainCadastro .sectionRight .formCadastro .boxInputsCadastro, .mainCadastro .sectionRight .formCadastro, .mainCadastro .sectionRight, .mainCadastro .btnCadastro, .mainCadastro .sectionLeft .boxTextCadastro, .mainCadastro .sectionLeft, .headerLogin, .mainLogin, .formArea, .formArea .formLogin, .formArea .formLogin .double-input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mainCadastro {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  padding-top: 4rem;
+  height: 94vh;
+}
+.mainCadastro .sectionLeft {
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30vw;
+  height: 70vh;
+}
+.mainCadastro .sectionLeft img {
+  height: 6rem;
+}
+.mainCadastro .sectionLeft .boxTextCadastro {
+  flex-direction: column;
+  gap: 2rem;
+  margin-bottom: 10rem;
+  margin-top: 4rem;
+}
+.mainCadastro .sectionLeft .boxTextCadastro .titleCadastro {
+  font-size: 3.5rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  text-align: start;
+}
+.mainCadastro .sectionLeft .boxTextCadastro p {
+  font-size: 1.25rem;
+  font-family: 400;
+  font-family: "Quicksand", sans-serif;
+  text-align: inherit;
+}
+.mainCadastro .btnCadastro {
+  border-radius: 15px;
+  width: 16.25rem;
+  height: 3.25rem;
+  font-size: 1.125rem;
+  color: #fff;
+  background-color: #f20519;
+  border: none;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+.mainCadastro .sectionRight {
+  flex-direction: column;
+  justify-content: space-between;
+  width: 35vw;
+  height: 70vh;
+  flex-wrap: wrap;
+  padding-top: 11rem;
+}
+.mainCadastro .sectionRight h2 {
+  display: flex;
+  align-items: end;
+  font-size: 2.5rem;
+  width: 100%;
+  font-weight: 600;
+  text-transform: capitalize;
+  text-align: start;
+}
+.mainCadastro .sectionRight .formCadastro {
+  flex-direction: column;
+  width: 100%;
+}
+.mainCadastro .sectionRight .formCadastro .boxInputsCadastro {
+  flex-direction: column;
+  gap: 2rem;
+  margin-bottom: 4rem;
+  width: 100%;
+}
+.mainCadastro .sectionRight .formCadastro .boxInputsCadastro .doubleInput {
+  display: flex;
+  gap: 2rem;
+  width: 100%;
 }
 
 @font-face {
