--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -1,3 +1,6 @@
+@import 'base';
 @import 'login';
 @import 'header&footer';
-@import 'base';
+@import 'home';
+@import 'cardComponent';
+@import 'sideBar';
