--- a/digibank/src/assets/styles/main.css
+++ b/digibank/src/assets/styles/main.css
@@ -1,3 +1,49 @@
+@font-face {
+  font-family: "Montserrat";
+  src: url(../fonts/Montserrat/Montserrat-VariableFont_wght.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Quicksand", sans-serif;
+  src: url(../fonts/Quicksand-Regular.ttf) format("truetype");
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat";
+}
+*::selection {
+  background-color: #f4f4f4;
+}
+
+.flex, main#home .left-menu-home nav, main#home, .suport-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.column, .credit-card .info-credit-card, .credit-card, main#home .right-menu-home, main#home .left-menu-home nav a, main#home .left-menu-home {
+  display: flex;
+  flex-direction: column;
+}
+
+.centralizado, .container {
+  margin: 0 auto;
+}
+
+.container {
+  width: 75%;
+}
+
+.btnPressionavel:active, main#home .left-menu-home nav a:active, .formArea .formLogin button:active {
+  transition: all 150ms;
+  transform: scale(0.98);
+}
+
+.sombreado, .credit-card {
+  box-shadow: 0 3px 7px 0px #000;
+}
+
 .flexCenter, .formArea .formLogin .double-input, .formArea .formLogin, .formArea, .mainLogin, .headerLogin {
   display: flex;
   align-items: center;
@@ -80,11 +126,19 @@ body {
   box-sizing: border-box;
   font-family: "Montserrat";
 }
+*::selection {
+  background-color: #f4f4f4;
+}
 
-.flex, .suport-header {
+.flex, main#home .left-menu-home nav, main#home, .suport-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.column, .credit-card .info-credit-card, .credit-card, main#home .right-menu-home, main#home .left-menu-home nav a, main#home .left-menu-home {
+  display: flex;
+  flex-direction: column;
 }
 
 .centralizado, .container {
@@ -93,6 +147,15 @@ body {
 
 .container {
   width: 75%;
+}
+
+.btnPressionavel:active, main#home .left-menu-home nav a:active, .formArea .formLogin button:active {
+  transition: all 150ms;
+  transform: scale(0.98);
+}
+
+.sombreado, .credit-card {
+  box-shadow: 0 3px 7px 0px #000;
 }
 
 header {
@@ -154,11 +217,19 @@ footer span {
   box-sizing: border-box;
   font-family: "Montserrat";
 }
+*::selection {
+  background-color: #f4f4f4;
+}
 
-.flex, .suport-header {
+.flex, main#home .left-menu-home nav, main#home, .suport-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.column, .credit-card .info-credit-card, .credit-card, main#home .right-menu-home, main#home .left-menu-home nav a, main#home .left-menu-home {
+  display: flex;
+  flex-direction: column;
 }
 
 .centralizado, .container {
@@ -167,6 +238,214 @@ footer span {
 
 .container {
   width: 75%;
+}
+
+.btnPressionavel:active, main#home .left-menu-home nav a:active, .formArea .formLogin button:active {
+  transition: all 150ms;
+  transform: scale(0.98);
+}
+
+.sombreado, .credit-card {
+  box-shadow: 0 3px 7px 0px #000;
+}
+
+main#home {
+  background-image: url("../img/bird-logo.png");
+  background-repeat: no-repeat;
+  background-position: right -70px;
+  height: calc(100vh - 120px);
+}
+main#home .left-menu-home {
+  justify-content: space-between;
+  width: 50%;
+  height: 80%;
+}
+main#home .left-menu-home h1 {
+  font-weight: 400;
+  font-size: 3.4rem;
+  margin-bottom: 5px;
+  text-transform: uppercase;
+}
+main#home .left-menu-home nav {
+  height: 120px;
+  width: 100%;
+}
+main#home .left-menu-home nav a {
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  height: 100%;
+  width: 22%;
+  font-weight: 400;
+  border-radius: 10px;
+  color: #000;
+  text-decoration: none;
+}
+main#home .left-menu-home nav a:hover {
+  transition: background-color ease-out 100ms;
+  background-color: #f4f4f4;
+}
+main#home .right-menu-home {
+  align-items: flex-end;
+  justify-content: flex-end;
+  width: 50%;
+  height: 80%;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url(../fonts/Montserrat/Montserrat-VariableFont_wght.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Quicksand", sans-serif;
+  src: url(../fonts/Quicksand-Regular.ttf) format("truetype");
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat";
+}
+*::selection {
+  background-color: #f4f4f4;
+}
+
+.flex, .suport-header, main#home, main#home .left-menu-home nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.column, .credit-card .info-credit-card, .credit-card, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home {
+  display: flex;
+  flex-direction: column;
+}
+
+.centralizado, .container {
+  margin: 0 auto;
+}
+
+.container {
+  width: 75%;
+}
+
+.btnPressionavel:active, .formArea .formLogin button:active, main#home .left-menu-home nav a:active {
+  transition: all 150ms;
+  transform: scale(0.98);
+}
+
+.sombreado, .credit-card {
+  box-shadow: 0 3px 7px 0px #000;
+}
+
+.credit-card {
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  max-width: 320px;
+  max-height: 200px;
+  padding: 25px;
+  border-radius: 10px;
+  background-color: #a70311;
+}
+.credit-card .logo-credit-card {
+  width: 100%;
+  height: 40%;
+}
+.credit-card .logo-credit-card img {
+  height: 60%;
+  width: auto;
+}
+.credit-card .info-credit-card {
+  gap: 5px;
+  width: 100%;
+  height: 40%;
+}
+.credit-card .info-credit-card * {
+  color: #fff;
+}
+.credit-card .info-credit-card h2 {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+.credit-card .info-credit-card span {
+  font-size: 1.25rem;
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url(../fonts/Montserrat/Montserrat-VariableFont_wght.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Quicksand", sans-serif;
+  src: url(../fonts/Quicksand-Regular.ttf) format("truetype");
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat";
+}
+*::selection {
+  background-color: #f4f4f4;
+}
+
+.flex, .suport-header, main#home, main#home .left-menu-home nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.column, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home, .credit-card, .credit-card .info-credit-card {
+  display: flex;
+  flex-direction: column;
+}
+
+.centralizado, .container {
+  margin: 0 auto;
+}
+
+.container {
+  width: 75%;
+}
+
+.btnPressionavel:active, .formArea .formLogin button:active, main#home .left-menu-home nav a:active {
+  transition: all 150ms;
+  transform: scale(0.98);
+}
+
+.sombreado, .credit-card {
+  box-shadow: 0 3px 7px 0px #000;
+}
+
+aside {
+  position: fixed;
+  right: calc(0px - 72.7272727273vh);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80vh;
+  height: 100vh;
+  overflow: hidden;
+  border-radius: 50%;
+  background-color: #f20519;
+}
+aside a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 1.25rem;
+  margin-left: 20px;
+}
+aside:hover {
+  transform: translateX(-15%) scale(1);
+  transition: transform linear 110ms;
+  justify-content: flex-start;
+}
+aside:not(:hover) {
+  transform: translateX(0%) scale(1);
+  transition: transform linear 110ms;
 }
 
 /*# sourceMappingURL=main.css.map */
