--- a/digibank/src/assets/styles/_login.scss
+++ b/digibank/src/assets/styles/_login.scss
@@ -1,5 +1,5 @@
 $primary-color: #fff;
-$secondary-color: #f20519;
+$secondary-color: #c00414;
 $third-color: #000;
 
 .flexCenter {
@@ -8,9 +8,6 @@ $third-color: #000;
     justify-content: center;
 }
 
-body {
-    background-color: $primary-color;
-}
 
 .headerLogin {
     @extend .flexCenter;
@@ -19,70 +16,98 @@ body {
         height: 6rem;
     }
 }
-.mainLogin {
-    @extend .flexCenter;
-    justify-content: space-between;
-    height: 90vh;
-}
-.formArea {
-    @extend .flexCenter;
-    align-items: initial;
-    flex-direction: column;
-    width: 29.125rem;
+.backColor{
+    background:linear-gradient(90deg, #c00414 15%, #c0041499 35%, #c0041480 45%, #c0041460 52%, #fff 63%);
+    background-size: cover;
+    background-repeat: no-repeat;
 
-    h1 {
-        font-size: 3.125rem;
-        text-transform: uppercase;
-        font-weight: 600;
-        margin-bottom: 2rem;
-    }
-    p {
-        font-size: 1.25rem;
-        margin-bottom: 4rem;
-        text-transform: capitalize;
-        font-family: "Quicksand", sans-serif;
-    }
-    .formLogin {
-        @extend .flexCenter;
-        flex-direction: column;
-        width: 100%;
-
-        .double-input {
-            @extend .flexCenter;
-            flex-direction: column;
-            width: 100%;
-        }
+    .mainLogin {
+        display: flex;
+        justify-content: space-between;
+        height: 100vh;
+        padding-top: 12rem;
+    
         
-        .double-input div div {
-            height: 3.25rem;
-            width: auto;
-            border-radius: 15px;
-            margin-bottom: 2rem;
-            background-color: transparent;
-
-            outline: none;
-            border: none;
+        .bannerLogin{
+            display: flex;
+            justify-content: initial;
+            flex-direction: column;
+            align-items: initial;
             
+            h1 {
+                font-size: 3.125rem;
+                text-transform: uppercase;
+                font-weight: 600;
+                margin-bottom: 2rem;
+            }
+            .titleLogin{
+                width: 90%;
+            }
+            p {
+                font-size: 1.25rem;
+                margin-bottom: 4rem;
+                text-transform: capitalize;
+                font-family: "Quicksand", sans-serif;
+                text-align: left
+            }
+            img{
+                position: absolute;
+                bottom: 0;
+                left: -150px;
+            }
         }
-        .double-input div div input {
-            border-radius: 15px;
-            // margin-bottom: 2rem;
-            background-color: transparent;
-            border: none;
-        }
-
-        button {
-            height: 3.25rem;
-            width: 100%;
-            border-radius: 15px;
-            margin-top: 2rem;
-
-            color: $primary-color;
-            background-color: $secondary-color;
-            border: none;
-            cursor: pointer;
-
-            font-size: 1.125rem;
+    
+        .formArea {
+            display: flex;
+            justify-content: initial;
+            align-items: initial;
+            flex-direction: column;
+            width: 29.125rem;
+    
+    
+            .formLogin {
+                @extend .flexCenter;
+                flex-direction: column;
+                width: 100%;
+    
+                .double-input {
+                    @extend .flexCenter;
+                    flex-direction: column;
+                    width: 100%;
+                }
+    
+                .double-input div div {
+                    height: 3.25rem;
+                    width: auto;
+                    border-radius: 15px;
+                    margin-bottom: 2rem;
+                    background-color: transparent;
+    
+                    outline: none;
+                    border: none;
+                }
+                .double-input div div input {
+                    border-radius: 15px;
+                    // margin-bottom: 2rem;
+                    background-color: transparent;
+                    border: none;
+                }
+    
+                button {
+                    height: 3.25rem;
+                    width: 100%;
+                    border-radius: 15px;
+                    margin-top: 2rem;
+    
+                    color: $primary-color;
+                    background-color: $secondary-color;
+                    border: none;
+                    cursor: pointer;
+    
+                    font-size: 1.125rem;
+                }
+            }
         }
     }
+    
 }
